name:                zkboo-hs
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/cocreature/zkboo-hs#readme
license:             BSD3
license-file:        LICENSE
author:              Moritz Kiefer
maintainer:          moritz.kiefer@purelyfunctional.org
copyright:           (C) 2017 Moritz Kiefer
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Crypto.ZKBoo
                       Crypto.ZKBoo.Util
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , containers
                     , cryptonite
                     , memory
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/cocreature/zkboo-hs
