name:                zkboo-hs
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/cocreature/zkboo-hs#readme
license:             BSD3
license-file:        LICENSE
author:              Moritz Kiefer
maintainer:          moritz.kiefer@purelyfunctional.org
copyright:           (C) 2017 Moritz Kiefer
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Crypto.ZKBoo
                       Crypto.ZKBoo.Util
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , bytestring-strict-builder
                     , containers
                     , cryptonite
                     , memory
                     , pedersen-commitment
  ghc-options:         -Wall
  default-language:    Haskell2010

test-suite zkboo-hs-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:
  build-depends:       base
                     , bytestring
                     , bytestring-strict-builder
                     , cryptonite
                     , hedgehog
                     , memory
                     , pedersen-commitment
                     , tasty >= 1.0
                     , tasty-hunit
                     , tasty-hedgehog
                     , zkboo-hs
  ghc-options:         -Wall
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/cocreature/zkboo-hs
